--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,31 @@
     transform: rotate(360deg);
   }
 }
+
+.list {
+  text-align: left;
+  max-width: 750px;
+  margin: auto;
+}
+
+.submit-form {
+  max-width: 300px;
+  margin: auto;
+}
+
+.edit-form {
+  max-width: 300px;
+  margin: auto;
+}
+
+.won {
+  background-color: #C1F0B2;
+}
+
+.lost {
+  background-color: #FEB9C6;
+}
+
+.tie {
+  background-color: #F9F2CC;
+}
